feat: trace them rays rly good

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ add_executable(raytracingdemo
         ray.h
         camera.h
         sphere.h
+        vector3.h
 )
 
 # --- GLFW (needs libglfw3-dev installed) ---
